@@ -4,6 +4,7 @@ Copyright (C) 1998-2005 by the following:
 If you have contributed to Gaim, you deserve to be on this list.
 Contact us (see: AUTHORS) and we'll add you.
 
+Peter Ajamian
 Daniel Atallah
 Paul Aurich
 Patrick Aussems
